# autonomous

./: .gitignore  README.md  drone.yml  main.ipynb  marker_2026_03_01_23_48_11_613.json  marker_2026_03_01_23_53_57_327.json  mav.parm  quad_sitl.param
gz_zmq_bridge/: CMakeLists.txt  GzZmqCameraBridge.cc
model-gz/models/camera_downward/: model.config  model.sdf
model-gz/models/grass/: model.sdf
model-gz/models/iris_with_downward_camera/: model.config  model.sdf
model-gz/models/iris_with_gimbal/: model.sdf
model-gz/worlds/: plain_grass.sdf  pole.sdf
models/: world.sdf
script/: generate-object.py  main.ipynb  main.py  playground.ipynb  trigger.py
